Cibyl (15)
	* Fixed a nasty bug for loads with unaligned base addresses and
	offsets, e.g.,

	   lw   a0, 3(s0)

	where s0 is e.g., 1. The memory register optimization has been
	removed since it's difficult to maintain with this bug. Only very
	minor performance decrease should be expected from that

	* Added a remove() function pointer for the fops. This is used to
	remove files in the different file systems (although none are
	implemented yet). Also slightly restructured the handling of file
	ops.

	* Remove the unecessary ; at the end of _syscall definitions
	(causes a warning with some GCC options)

	* exit is now really noreturn and is a real function. Also fixed
	the local jumptab to deal with these situations (add a jump over
	it to prevent that something just "falls" into it)

	* Implemented localtime, localtime_r and the Java TimeZone class
	(parts of), sscanf from dietlibc and limits.h from glibc

	* Added an option to turn off the generation of CRunTime.memory
	aloads/astores. This works around a SE bug in Sarien (stupid
	phones!)

	* Initial work on the Qemu proxy server and debug support. This
	does *not* work yet.

	* Fixed bug in the register value tracking - it needs to
	invalidate registers on basic block entry *and* exit (branch), not
	just on entry. Well, well.

	* Corrected various syscall stuff,  isinff name (was isnanf...),
	some of the softfloat functions are not implemented in J2ME,
	cannot create OutputStream (abstrac) etc

	-- Simon Kagstrom <simon.kagstrom@gmail.com>

Cibyl (14)
	* More peephole optimizations: move constant assignments past
	memory pushing (to simplify other peephole optimizations), better
	support for catching double stores

	* Push a local variable as memory reference instead of the static
	CRunTime.memory each time. This saves 1-2 byte on each memory
	access, and perhaps improves speed a bit as well.

	* Implemented (partially) a register value tracker. This can for